[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "funambridge"
version = "0.1.2"
description = "Accede a O2 Cloud (Funambol OneMediaHub) por S3 y WebDAV"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=5.4"]

[project.urls]
Homepage = "https://github.com/atallo/funambridge"

[project.scripts]
funambridge = "funambridge.cli:main"

[tool.setuptools]
packages = ["funambridge"]
